# fastapi-docker

./: .gitignore  Dockerfile  pyproject.toml
src/: main.py  study.py
src/core/: config.py  crud.py  models.py  schemas.py  security.py
